[gd_scene load_steps=17 format=3 uid="uid://duerkrrr7rtke"]

[ext_resource type="Script" path="res://src/Match/Match.gd" id="1_f5ywy"]
[ext_resource type="PackedScene" uid="uid://nnymtlb30j16" path="res://src/Player/Player1.tscn" id="2_uypan"]
[ext_resource type="PackedScene" uid="uid://cckkobajuigow" path="res://src/Oponent/Oponent.tscn" id="3_ds406"]
[ext_resource type="PackedScene" uid="uid://dx2usplti4ufj" path="res://src/Ball/Ball.tscn" id="4_qrpew"]
[ext_resource type="Script" path="res://src/Match/limit.gd" id="5_3qgfv"]
[ext_resource type="AudioStream" uid="uid://b2u1tjddhr8m6" path="res://assets/sounds/hit-wall.wav" id="5_dkq5q"]
[ext_resource type="Script" path="res://src/Score/ScoreArea.gd" id="5_obyxs"]
[ext_resource type="PackedScene" uid="uid://c4uarrk66l8h2" path="res://src/Score/Score.tscn" id="6_87ktl"]
[ext_resource type="AudioStream" uid="uid://bbn2mgyckatbu" path="res://assets/sounds/scored.wav" id="6_r8kkc"]
[ext_resource type="PackedScene" uid="uid://ty34ba21d45x" path="res://src/Settings/settings.tscn" id="11_p431x"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_a81x3"]
a = Vector2(0, -43)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q546r"]
a = Vector2(0, -43)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="1"]
b = Vector2(1280, 0)

[sub_resource type="SegmentShape2D" id="2"]
a = Vector2(0, 720)
b = Vector2(1280, 720)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(40, 716)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(40, 716)

[node name="MatchPvE" type="Node2D"]
process_mode = 3
script = ExtResource("1_f5ywy")

[node name="Player" parent="." instance=ExtResource("2_uypan")]
process_mode = 1
position = Vector2(120, 179)
metadata/racket = true

[node name="Marker2D" type="Marker2D" parent="Player"]
position = Vector2(48, 0)

[node name="Up" type="Area2D" parent="Player"]
position = Vector2(3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Up"]
position = Vector2(13, -21)
shape = SubResource("SegmentShape2D_a81x3")

[node name="Down" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Down"]
position = Vector2(16, 65)
shape = SubResource("SegmentShape2D_a81x3")

[node name="Oponent" parent="." instance=ExtResource("3_ds406")]
process_mode = 1
position = Vector2(1160, 548)
metadata/racket = true

[node name="Marker2D" type="Marker2D" parent="Oponent"]
position = Vector2(-47, 0)

[node name="Up" type="Area2D" parent="Oponent"]
position = Vector2(-1037, -369)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Oponent/Up"]
position = Vector2(1021, 348)
shape = SubResource("SegmentShape2D_q546r")

[node name="Down" type="Area2D" parent="Oponent"]
position = Vector2(-32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Oponent/Down"]
position = Vector2(16, 65)
shape = SubResource("SegmentShape2D_a81x3")

[node name="Ball" parent="." instance=ExtResource("4_qrpew")]
process_mode = 1
position = Vector2(640, 360)

[node name="limit" type="StaticBody2D" parent="."]
process_mode = 1
script = ExtResource("5_3qgfv")

[node name="limit_up" type="CollisionShape2D" parent="limit"]
shape = SubResource("1")

[node name="limit_down" type="CollisionShape2D" parent="limit"]
shape = SubResource("2")

[node name="Area2D" type="Area2D" parent="limit"]
collision_mask = 2

[node name="limit_up" type="CollisionShape2D" parent="limit/Area2D"]
position = Vector2(0, 1)
shape = SubResource("1")

[node name="limit_down" type="CollisionShape2D" parent="limit/Area2D"]
position = Vector2(0, -1)
shape = SubResource("2")

[node name="HitWall" type="AudioStreamPlayer" parent="limit"]
unique_name_in_owner = true
stream = ExtResource("5_dkq5q")

[node name="ScoreArea" type="Area2D" parent="."]
process_mode = 1
script = ExtResource("5_obyxs")

[node name="Player1Area" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(20, 360)
shape = SubResource("4")

[node name="Player2Area" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(1260, 360)
shape = SubResource("5")

[node name="Scored" type="AudioStreamPlayer" parent="ScoreArea"]
unique_name_in_owner = true
stream = ExtResource("6_r8kkc")

[node name="Score" parent="." instance=ExtResource("6_87ktl")]
process_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("11_p431x")]
unique_name_in_owner = true
process_mode = 3
visible = false
offset_left = 640.0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 360.0
title_name = "PAUSED"
return_name = " RESUME "
enable_main_menu = true

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="Player/Up" to="Ball" method="_on_up_body_entered"]
[connection signal="body_entered" from="Player/Down" to="Ball" method="_on_down_body_entered"]
[connection signal="body_entered" from="Oponent/Up" to="Ball" method="_on_up_body_entered"]
[connection signal="body_entered" from="Oponent/Down" to="Ball" method="_on_down_body_entered"]
[connection signal="body_entered" from="limit/Area2D" to="limit" method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="ScoreArea" to="ScoreArea" method="_on_Score_Area_body_shape_entered"]
[connection signal="player_1_scored" from="ScoreArea" to="." method="_on_score_area_player_1_scored"]
[connection signal="player_2_scored" from="ScoreArea" to="." method="_on_score_area_player_2_scored"]
[connection signal="main_menu_pressed" from="PauseMenu" to="." method="_on_pause_menu_main_menu_pressed"]
[connection signal="music_volume_changed" from="PauseMenu" to="." method="_on_pause_menu_music_volume_changed"]
[connection signal="return_pressed" from="PauseMenu" to="." method="_on_pause_menu_return_pressed"]
[connection signal="sfx_volume_changed" from="PauseMenu" to="." method="_on_pause_menu_sfx_volume_changed"]
[connection signal="sfx_volume_changed" from="PauseMenu" to="Player" method="_on_pause_menu_sfx_volume_changed"]
[connection signal="sfx_volume_changed" from="PauseMenu" to="Oponent" method="_on_pause_menu_sfx_volume_changed"]
