[gd_scene load_steps=19 format=3 uid="uid://cohcwcia3e58c"]

[ext_resource type="Script" path="res://src/Match/Match.gd" id="1_m6xwh"]
[ext_resource type="PackedScene" uid="uid://nnymtlb30j16" path="res://src/Player/Player1.tscn" id="2_e7hu4"]
[ext_resource type="PackedScene" uid="uid://de2quagk7k16x" path="res://src/Player/Player2.tscn" id="3_3ln1f"]
[ext_resource type="PackedScene" uid="uid://dx2usplti4ufj" path="res://src/Ball/Ball.tscn" id="4_sbfvm"]
[ext_resource type="AudioStream" uid="uid://b2u1tjddhr8m6" path="res://assets/sounds/hit-wall.wav" id="5_c8l5l"]
[ext_resource type="Script" path="res://src/Match/limit.gd" id="5_sulds"]
[ext_resource type="Script" path="res://src/Score/ScoreArea.gd" id="5_u8yry"]
[ext_resource type="PackedScene" uid="uid://c4uarrk66l8h2" path="res://src/Score/Score.tscn" id="6_5deb1"]
[ext_resource type="AudioStream" uid="uid://bbn2mgyckatbu" path="res://assets/sounds/scored.wav" id="6_qd4nc"]
[ext_resource type="PackedScene" uid="uid://cfxsplq6o46ax" path="res://src/Match/PauseLabel.tscn" id="7_mby4w"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_a81x3"]
a = Vector2(0, -43)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q546r"]
a = Vector2(0, -43)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="1"]
b = Vector2(1280, 0)

[sub_resource type="SegmentShape2D" id="2"]
a = Vector2(0, 720)
b = Vector2(1280, 720)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xkwky"]
b = Vector2(1280, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8kngr"]
a = Vector2(0, 720)
b = Vector2(1280, 720)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(40, 716)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(40, 716)

[node name="MatchPvP" type="Node2D"]
process_mode = 3
script = ExtResource("1_m6xwh")

[node name="Player1" parent="." instance=ExtResource("2_e7hu4")]
process_mode = 1
position = Vector2(120, 179)
metadata/racket = true

[node name="Marker2D" type="Marker2D" parent="Player1"]
position = Vector2(48, 0)

[node name="Up" type="Area2D" parent="Player1"]
position = Vector2(3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1/Up"]
position = Vector2(13, -21)
shape = SubResource("SegmentShape2D_a81x3")

[node name="Down" type="Area2D" parent="Player1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1/Down"]
position = Vector2(16, 65)
shape = SubResource("SegmentShape2D_a81x3")

[node name="Player2" parent="." instance=ExtResource("3_3ln1f")]
process_mode = 1
position = Vector2(1160, 548)
is_player1 = false

[node name="Marker2D" type="Marker2D" parent="Player2"]
position = Vector2(-47, 0)

[node name="Up" type="Area2D" parent="Player2"]
position = Vector2(-1037, -369)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/Up"]
position = Vector2(1021, 348)
shape = SubResource("SegmentShape2D_q546r")

[node name="Down" type="Area2D" parent="Player2"]
position = Vector2(-32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/Down"]
position = Vector2(16, 65)
shape = SubResource("SegmentShape2D_a81x3")

[node name="Ball" parent="." instance=ExtResource("4_sbfvm")]
process_mode = 1
position = Vector2(640, 360)

[node name="limit" type="StaticBody2D" parent="."]
process_mode = 1
script = ExtResource("5_sulds")

[node name="limit_up" type="CollisionShape2D" parent="limit"]
shape = SubResource("1")

[node name="limit_down" type="CollisionShape2D" parent="limit"]
shape = SubResource("2")

[node name="Area2D" type="Area2D" parent="limit"]
collision_mask = 2

[node name="limit_up" type="CollisionShape2D" parent="limit/Area2D"]
position = Vector2(0, 1)
shape = SubResource("SegmentShape2D_xkwky")

[node name="limit_down" type="CollisionShape2D" parent="limit/Area2D"]
position = Vector2(0, -1)
shape = SubResource("SegmentShape2D_8kngr")

[node name="HitWall" type="AudioStreamPlayer" parent="limit"]
unique_name_in_owner = true
stream = ExtResource("5_c8l5l")

[node name="ScoreArea" type="Area2D" parent="."]
process_mode = 1
script = ExtResource("5_u8yry")

[node name="Player1Area" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(20, 360)
shape = SubResource("4")

[node name="Player2Area" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(1260, 360)
shape = SubResource("5")

[node name="Scored" type="AudioStreamPlayer" parent="ScoreArea"]
unique_name_in_owner = true
stream = ExtResource("6_qd4nc")

[node name="Score" parent="." instance=ExtResource("6_5deb1")]
process_mode = 1

[node name="PauseLabel" parent="." instance=ExtResource("7_mby4w")]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="Player1/Up" to="Ball" method="_on_up_body_entered"]
[connection signal="body_entered" from="Player1/Down" to="Ball" method="_on_down_body_entered"]
[connection signal="body_entered" from="Player2/Up" to="Ball" method="_on_up_body_entered"]
[connection signal="body_entered" from="Player2/Down" to="Ball" method="_on_down_body_entered"]
[connection signal="body_entered" from="limit/Area2D" to="limit" method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="ScoreArea" to="ScoreArea" method="_on_Score_Area_body_shape_entered"]
[connection signal="player_1_scored" from="ScoreArea" to="." method="_on_score_area_player_1_scored"]
[connection signal="player_2_scored" from="ScoreArea" to="." method="_on_score_area_player_2_scored"]
